test/integration/cases/07-sni-route/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo-https-foo
  annotations:
    kubernetes.io/ingress.class: kong
    konghq.com/protocols: https
    konghq.com/snis: "example.com"
spec:
  tls:
  - hosts:
      - example.com
    secretName: tls-example-com
  rules:
  - host: example.com
    http:
      paths:
      - backend:
          service:
            name: echo
            port:
              number: 8080
        path: /foo
        pathType: Prefix
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo-https-bar
  annotations:
    kubernetes.io/ingress.class: kong
    konghq.com/protocols: https
    konghq.com/snis: "example.net"
spec:
  tls:
  - hosts:
      - example.net
    secretName: tls-example-net
  rules:
  - host: example.net
    http:
      paths:
      - backend:
          service:
            name: echo
            port:
              number: 8080
        path: /bar
        pathType: Prefix
---
apiVersion: v1
kind: Secret
metadata:
  name: tls-example-com
data:
  tls.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURPVENDQWlHZ0F3SUJBZ0lVTkkxSWppZDdrM3JDZWRtWkhocUdtRkJGNDA4d0RRWUpLb1pJaHZjTkFRRUwKQlFBd0xERVVNQklHQTFVRUF3d0xaWGhoYlhCc1pTNWpiMjB4RkRBU0JnTlZCQW9NQzJWNFlXMXdiR1V1WTI5dApNQjRYRFRJd01UQXpNREU1TWpnME4xb1hEVEl4TVRBek1ERTVNamcwTjFvd0xERVVNQklHQTFVRUF3d0xaWGhoCmJYQnNaUzVqYjIweEZEQVNCZ05WQkFvTUMyVjRZVzF3YkdVdVkyOXRNSUlCSWpBTkJna3Foa2lHOXcwQkFRRUYKQUFPQ0FROEFNSUlCQ2dLQ0FRRUFxL21GOHNOenVwTFRyTFRpL3hZOGNxWjhWR1VIYzM2eXpkM2t0cHR1T0VDdgpqa0p6Q0FRNFBaRXljR [...]
  tls.key: LS0tLS1CRUdJTiBQUklWQVRFIEtFWS0tLS0tCk1JSUV2UUlCQURBTkJna3Foa2lHOXcwQkFRRUZBQVNDQktjd2dnU2pBZ0VBQW9JQkFRQ3IrWVh5dzNPNmt0T3MKdE9ML0ZqeHlwbnhVWlFkemZyTE4zZVMybTI0NFFLK09Rbk1JQkRnOWtUSndQR1hieHJiZU0wNHFzNk0vMFBSUwpOM0R6M1V5cUN4aFRxZDc0Ym9YUnIvWVBlcUpjZ1hFaVZBT0VWYUt2QUM3OFBJbXdadVgrL2pqT0VjYVJ0dm01CnBRdDVtaERlUHdwcklwK01iM2Y2U3ZPQUxRd3FraWxORU5Gb3Rmb0hzU2JhejJLaXpOQ2cyTU93ZlpqMTZmazMKSHpuZ1d3NXJuMDEyRUl6WjdoNzkxdDJMQ3FVZm5XSTQzRUg3ejhSV2dZWDFZSFR6QTlKeXBvNkVnY1RXdnZRNgpJTGVUVHgxQUM1WHNmK [...]
type: kubernetes.io/tls
---
apiVersion: v1
kind: Secret
metadata:
  name: tls-example-net
data:
  tls.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURPVENDQWlHZ0F3SUJBZ0lVR3V1cm40U0FxdWM1QkVOeWEvMVpEdm1MNWswd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0xERVVNQklHQTFVRUF3d0xaWGhoYlhCc1pTNXVaWFF4RkRBU0JnTlZCQW9NQzJWNFlXMXdiR1V1Ym1WMApNQjRYRFRJd01UQXpNREU1TWprME5sb1hEVEl4TVRBek1ERTVNamswTmxvd0xERVVNQklHQTFVRUF3d0xaWGhoCmJYQnNaUzV1WlhReEZEQVNCZ05WQkFvTUMyVjRZVzF3YkdVdWJtVjBNSUlCSWpBTkJna3Foa2lHOXcwQkFRRUYKQUFPQ0FROEFNSUlCQ2dLQ0FRRUF2a3Qxb1JRWDY1cDVYcXlvMWtnWVcraGxGMnQyQjN1MUhzdUw4WjFZV0RxNQpTd0Q0dTVkMmRycHRJV [...]
  tls.key: LS0tLS1CRUdJTiBQUklWQVRFIEtFWS0tLS0tCk1JSUV2QUlCQURBTkJna3Foa2lHOXcwQkFRRUZBQVNDQktZd2dnU2lBZ0VBQW9JQkFRQytTM1doRkJmcm1ubGUKcktqV1NCaGI2R1VYYTNZSGU3VWV5NHZ4blZoWU9ybExBUGk3bDNaMnVtMGhYeW8xMDF1d0ttMUFXbDhHb1VxdQpjRHBFcHpSZmNhaklwQzI5S3d0R3ZDbFJQRjA1L1BJSkN5SkJ3M3RGbUx4V2ZtU2xjWlJvTFZEdE8zZm1VdWorCldhUDRub3dLdzBhTDNteXVXWU5JbkJEb28vSFNzaUFOa2R0VTMyRkJrNTQyQXFPV000UjBVclB5SGZ4TWpVSTAKeTZJOXdhdTVrZytwTnNSK1VtaTdUTUE2cXhoRWt5djF3QTN0dUgwL0RaQVN4L0FzdklnaWtuUFh6WlRZanRtRgpvOGwvQU0rVzVyWndZY [...]
type: kubernetes.io/tls
